# SRN-statistical-learning-experimentation

./: .gitignore  README.md  pyproject.toml
app/: app.py  notes_reunion_2.txt  readme.md  srn.py
app/data/: extracted_sequences.json  inputs_parser.py
app/static/: main.js  style.css
app/templates/: index.html
doc/report/: report.typ
src/: args.py  data.py  main.py
src/models/: elman_SRN.py
src/models/Elman_SRN/: Elman_SRN.py  torch_Elman_SRN.py
src/models/test_pytorch/: Elman_SRN.py
src/utils/: args.py  formater.py
