[project]
name = "srn-statistical-learning-experimentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.20",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "xlrd>=2.0.2",
]
