[project]
name = "srn-statistical-learning-experimentation"
version = "0.1.0"
description = "Experimentation (playground) of simple recursive network in the domain of human statistical learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.4.2", "pandas>=3.0.1", "torch>=2.10.0", "xlrd>=2.0.2"]

[tool.uv]
dev-dependencies = ["debugpy>=1.8.20", "pytest>=9.0.2"]
